--- a/cenario.css
+++ b/cenario.css
@@ -10,16 +10,16 @@ body{
     height: 100vh;
     width: 100vw;
 
-
+    
 }
 main{
     
-   width:  80%;
+   width: 80%;
     aspect-ratio: 16/9;
     background-color: whitesmoke;
     border-radius: 0px;
-    border: 0px solid black;
-    
+    border: 5px solid black;
+    border-radius: 18px;
     display: grid;
     justify-content: center;
     justify-items: center;
@@ -51,7 +51,7 @@ main{
     width: 100%;
     height: 100%;
     top: 0px;
-    
+    border-radius: 15px;
     background: green ;
 
 }
@@ -61,6 +61,6 @@ main{
     width: 100%;
     height: 100%;
     top: 0px;
-    
+    border-radius: 15px;
     background: orange ;
 }
