--- a/cenario.css
+++ b/cenario.css
@@ -14,7 +14,7 @@ body{
 }
 main{
     
-   width: 90%;
+   height: 90%;
     aspect-ratio: 16/9;
     background-color: whitesmoke;
     border-radius: 0px;
