--- a/cenario.css
+++ b/cenario.css
@@ -19,6 +19,8 @@ main{
     background-color: whitesmoke;
     border-radius: 0px;
     border: 5px solid black;
+    background: url('/assets/idosa/cenario\ idosa\ 1.png') ;
+
     border-radius: 18px;
     display: grid;
     justify-content: center;
@@ -29,21 +31,17 @@ main{
     grid-template-rows: repeat(10,1fr);
 }
 
-#mesaCartas{
 
-    grid-area: 8/1/11/6;
-    width: 100%;
-    height: 100%;
-    border-radius: 15px;
-    background: red ;
-}
 #inimigo{
-    grid-area: 3/6
-               /6/8;
+    grid-area: 5/6
+                /8/8;
    
-    width: 80%;
+    width: 90%;
     aspect-ratio: 2/3;
-    background: blue ;
+    
+    background-image: url('./assets/idosa/Idosa1.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 #alegriaInimigo{
     grid-area: 1/1/1/3;
