--- a/estilos/Carta.css
+++ b/estilos/Carta.css
@@ -4,8 +4,7 @@
     width: 100%;
     height: 100%;
     border-radius: 15px;
-    background: red ;
-
+    background-color: red;
     display: flex;
     justify-content: center;
     align-items: center;
