--- a/estilos/Carta.css
+++ b/estilos/Carta.css
@@ -4,20 +4,21 @@
     width: 100%;
     height: 100%;
     border-radius: 15px;
-    background-color: red;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 25px;
 
 }
 #mesaCartas .carta{
     height: 50%;
     aspect-ratio: 1/1;
-    background-color: blue;
+    background-color: whitesmoke;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: black;
+    box-shadow: 5px 5px 15px black;
     font-size: large;
     padding: 10px;
 }
