--- a/estilos/Mapa.css
+++ b/estilos/Mapa.css
@@ -1,5 +1,4 @@
 .mapa{
-    position: absolute;
     top:calc(calc(50% - 45%) - 2.5px);
     left:calc(calc(50% - 40%) - 5px);
 
@@ -11,8 +10,8 @@
     background-color:whitesmoke ;
 
     display: grid;
-    grid-template-columns: repeat(5,1fr);
-    grid-template-columns: repeat(5,1fr);
+    grid-template-columns: repeat(8,1fr);
+    grid-template-rows: repeat(8,1fr);
 
     justify-content: center;
     justify-items: center;
@@ -22,7 +21,29 @@
 }
 
 .molduarPersonagem{
-    width: 80%;
-    aspect-ratio: 1/1;
+
+    height: 80%;
+   aspect-ratio: 1/1;
+   margin-top: 200px;
+    border-radius: 5px;
     background-color: red;
+    background-image: url('../assets/cortina/cortina2.png');
+    background-repeat: no-repeat;
+    background-size: cover; 
+}   
+ .a1{
+    grid-column: 5;
+    grid-row: 5;
+}
+.a2{
+    grid-column: 4;
+    grid-row: 5;
+}
+.a3{
+    grid-column: 5;
+    grid-row: 4;
+}
+.a0{
+    grid-column: 4;
+    grid-row: 4;
 }
