--- a/cenario.css
+++ b/cenario.css
@@ -34,16 +34,31 @@ main{
 
 
 #inimigo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     grid-area: 5/6
                 /8/8;
    
     width: 90%;
     aspect-ratio: 2/3;
-    
-    background-image: url('./assets/idosa/Idosa1.png');
-  
+    z-index: 10;
+    background-image: url('./assets/Idosa/Idosa1.png');
     background-repeat: no-repeat;
     background-size: cover;
+}
+#inimigo::before{
+   
+    content: '';
+    width: 100%;
+    height: 100%;
+    
+    filter: blur(5px);
+    z-index: -1;
+    opacity: 0.5;
+    background-image: url('./assets/sombra.png') ;
+    background-size: cover;
+    
 }
 #alegriaInimigo{
     grid-area: 1/1/1/3;
