--- a/cenario.css
+++ b/cenario.css
@@ -34,11 +34,12 @@ main{
 
 
 #inimigo{
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    grid-area: 5/6
-                /8/8;
+    grid-area: 7/6
+                /9/8;
    
     width: 90%;
     aspect-ratio: 2/3;
@@ -46,20 +47,9 @@ main{
     background-image: url('./assets/Idosa/Idosa1.png');
     background-repeat: no-repeat;
     background-size: cover;
+    filter: drop-shadow(0px 0px  10px rgba(0,0,0,1))
 }
-#inimigo::before{
-   
-    content: '';
-    width: 100%;
-    height: 100%;
-    
-    filter: blur(5px);
-    z-index: -1;
-    opacity: 0.5;
-    background-image: url('./assets/sombra.png') ;
-    background-size: cover;
-    
-}
+
 #alegriaInimigo{
     grid-area: 1/1/1/3;
 
