--- a/cenarioCelular.css
+++ b/cenarioCelular.css
@@ -31,6 +31,11 @@
         aspect-ratio: 2/3;
         background: blue ;
     }
+    #sombra{
+        width: 100%;
+        height: 100%;
+        background: black;  
+    }
     #alegriaInimigo{
         grid-area: 1/1/1/6;
     
