barras de vida ciadas

--- a/cenario.css
+++ b/cenario.css
@@ -75,3 +75,10 @@ main{
 ;   justify-content: center;
     align-items: center;
 }
+
+.heartContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
