--- a/estilos/Mapa.css
+++ b/estilos/Mapa.css
@@ -8,7 +8,9 @@
     border: 5px solid black;
     aspect-ratio: 16/9;
     background-color:whitesmoke ;
-
+    
+    background-image: url('../assets/mapa2.png');
+    background-size: cover;
     display: flex;
     justify-content: center;
     justify-items: center;
@@ -35,6 +37,8 @@
     background-image: url('../assets/cortina/cortina2.png');
     background-repeat: no-repeat;
     background-size: cover; 
+    filter: drop-shadow(0px 0px  10px rgba(0,0,0,1))
+
 }   
  .a1{
     grid-column: 1;
