barras de vida funcionando

--- a/cenario.css
+++ b/cenario.css
@@ -76,7 +76,7 @@ main{
     align-items: center;
 }
 
-.heartContainer{
+.vidaInimigo{
     display: flex;
     justify-content: center;
     align-items: center;
