--- a/estilos/Mapa.css
+++ b/estilos/Mapa.css
@@ -37,9 +37,12 @@
     background-image: url('../assets/cortina/cortina2.png');
     background-repeat: no-repeat;
     background-size: cover; 
-    filter: drop-shadow(0px 0px  10px rgba(0,0,0,1))
-
+    filter: drop-shadow(0px 0px  10px rgba(0,0,0,1));
 }   
+.molduarPersonagem:hover{
+    animation: grow 0.5s ease-in-out alternate infinite;
+    animation-fill-mode: forwards;
+}
  .a1{
     grid-column: 1;
     grid-row: 1;
@@ -55,4 +58,16 @@
 .a0{
     grid-column: 2;
     grid-row: 2;
+}
+
+@keyframes grow {
+    0%{
+        transform: scale(1);
+    }
+    50%{
+        transform: scale(1.05);
+    }
+    100%{
+        transform: scale(1);
+    }
 }
