--- a/estilos/Mapa.css
+++ b/estilos/Mapa.css
@@ -34,6 +34,7 @@
     z-index: 5;
    aspect-ratio: 1/1;
     border-radius: 5px;
+    background: #7b3715;
     background-image: url('../assets/cortina/cortina2.png');
     background-repeat: no-repeat;
     background-size: cover; 
