--- a/estilos/Mapa.css
+++ b/estilos/Mapa.css
@@ -39,7 +39,15 @@
     background-repeat: no-repeat;
     background-size: cover; 
     filter: drop-shadow(0px 0px  10px rgba(0,0,0,1));
+
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
 }   
+.molduarPersonagem h3{
+    margin: 0%;
+    padding: 0%;
+}
 .molduarPersonagem:hover{
     animation: grow 0.5s ease-in-out alternate infinite;
     animation-fill-mode: forwards;
