--- a/estilos/Mapa.css
+++ b/estilos/Mapa.css
@@ -44,6 +44,10 @@
     align-items: flex-end;
     justify-content: center;
 }   
+.fechada{
+    background-image: url('../assets//coração.png');
+
+}
 .molduarPersonagem h3{
     margin: 0%;
     padding: 0%;
