--- a/estilos/Mapa.css
+++ b/estilos/Mapa.css
@@ -45,7 +45,7 @@
     justify-content: center;
 }   
 .fechada{
-    background-image: url('../assets//coração.png');
+    background-image: url('../assets//cortina/cortinaF.png');
 
 }
 .molduarPersonagem h3{
