--- a/estilos/cenario.css
+++ b/estilos/cenario.css
@@ -5,6 +5,7 @@
 
 body{
     color: #fff;
+    background-color: wheat;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
     margin: 0;
@@ -75,7 +76,6 @@ main{
     height: 100%;
     top: 0px;
     border-radius: 15px;
-    background: green ;
     display: flex;
        justify-content: center;
         align-items: center;
@@ -103,9 +103,23 @@ main{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    margin-left: 0;
+    margin-top: 0;
+    gap: 5px;
+    border-top: 5px solid black;
+
+    border-right: 5px solid black;
+
+    border-bottom: 5px solid black;
+    border-top-left-radius: 15px;
+    background-image: url('../assets/mapa2.png');
+    background-size: cover;
 }
 .vidaInimigo .heart{
-    width: 10%;
+    width: 8%;
+    filter: drop-shadow(0px 0px  10px rgba(0,0,0,1));
+
+    aspect-ratio: 1/1;
 }
 .vidaJogador{
     position: relative;
@@ -125,4 +139,76 @@ main{
     background-size:cover;
     filter: drop-shadow(0px 0px  2px rgb(0, 0, 0))
 
+}
+
+#inimigo.GenZ {
+    background-image: url("../../../assets/GenZ/sprite/s0.png");
+}
+
+#inimigo.GenZ[data-frame="1"] {
+    background-image: url("../../../assets/GenZ/sprite/s1.png");
+}
+
+#inimigo.GenZ[data-frame="2"] {
+    background-image: url("../../../assets/GenZ/sprite/s2.png");
+}
+
+#inimigo.GenZ[data-frame="3"] {
+    background-image: url("../../../assets/GenZ/sprite/s3.png");
+}
+
+#inimigo.Militar {
+    background-image: url("../../../assets/Militar/sprite/s0.png");
+}
+
+#inimigo.Militar[data-frame="1"] {
+    background-image: url("../../../assets/Militar/sprite/s1.png");
+}
+
+#inimigo.Militar[data-frame="2"] {
+    background-image: url("../../../assets/Militar/sprite/s2.png");
+}
+
+#inimigo.Militar[data-frame="3"] {
+    background-image: url("../../../assets/Militar/sprite/s3.png");
+}
+
+
+#inimigo.Padre {
+    background-image: url("../../../assets/Padre/sprite/s0.png");
+}
+
+#inimigo.Padre[data-frame="1"] {
+    background-image: url("../../../assets/Padre/sprite/s1.png");
+}
+
+#inimigo.Padre[data-frame="2"] {
+    background-image: url("../../../assets/Padre/sprite/s2.png");
+}
+
+#inimigo.Padre[data-frame="3"] {
+    background-image: url("../../../assets/Padre/sprite/s3.png");
+}
+
+#inimigo.Idosa {
+    background-image: url("../../../assets/Idosa/sprite/s0.png");
+}
+
+#inimigo.Idosa[data-frame="1"] {
+    background-image: url("../../../assets/Idosa/sprite/s1.png");
+}
+
+#inimigo.Idosa[data-frame="2"] {
+    background-image: url("../../../assets/Idosa/sprite/s2.png");
+}
+
+#inimigo.Idosa[data-frame="3"] {
+    background-image: url("../../../assets/Idosa/sprite/s3.png");
+}
+
+
+.voltar{
+    width: 50px;
+    height: 50px;
+    background-color: brown;
 }
