--- a/estilos/Resultado.css
+++ b/estilos/Resultado.css
@@ -18,6 +18,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 50px;
     flex-direction:  column-reverse;
 }
 .resultado h1{
