--- a/estilos/Menu.css
+++ b/estilos/Menu.css
@@ -22,12 +22,11 @@ body{
 main{
     top:calc(calc(50% - 45%) - 2.5px);
     left:calc(calc(50% - 40%) - 5px);
-
+    width: 90%;
     height: 90%;
     border-radius: 18px;
-    
+
     border: 5px solid black;
-    aspect-ratio: 16/9;
     background-color:wheat ;
     
     background-size: cover;
@@ -36,9 +35,10 @@ main{
     align-items: center;
     justify-content: center;
 
-    gap: 30px;
+    gap: 50px;
     z-index: 2;
 }
+
 main section{
     display: flex;
     flex-direction: column;
